testsuite/tests/dependent/should_fail/BadTelescope3.hs
{-# LANGUAGE TypeInType, ExplicitForAll #-}

module BadTelescope3 where

import Data.Kind

data SameKind :: k -> k -> *

type S a k (b :: k) = SameKind a b
